# edgepad

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
docs/: device-discovery.md  dump-capture.md  nix.md  passthrough-uinput.md  replay-format.md
examples/: edgepad.toml.example
nix/: home-manager-module.nix  module-tests.nix  nixos-module.nix  package.nix
packaging/: 70-edgepad.rules  edgepad.service
src/: actions.rs  config.rs  device.rs  doctor.rs  dump.rs  lib.rs  main.rs  notify.rs  proxy.rs  raw.rs  status.rs  uinput.rs
tests/: core_invariants.rs  daemon_cli.rs  device_cli.rs  device_discovery.rs  doctor_cli.rs  dump_cli.rs  dump_events.rs  help_cli.rs  install_script.rs  passthrough_frames.rs  proxy_cli.rs  raw_events.rs  raw_output_composer.rs  raw_output_sink.rs  raw_parse.rs  raw_routing.rs  release_artifacts.rs  replay_cli.rs  replay_fixtures.rs  replay_metadata.rs  status_cli.rs  uinput_live.rs  uinput_sink.rs  uinput_spec.rs
tests/fixtures/: center-touch-passthrough.ev  duplicate-tracking-id.ev  left-edge-swipe-right.ev  mixed-edge-and-center.ev  syn-dropped-reset.ev
