[package]
name = "edgepad"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Touchpad edge gestures for Linux/Wayland"
repository = "https://github.com/assembledev/edgepad"

[lib]
name = "edgepad"
path = "src/lib.rs"

[[bin]]
name = "edgepad"
path = "src/main.rs"

[dependencies]
evdev = "0.13.2"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["ioctl"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
